Fix: instagram-wrapper class to align center.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .instagram-wrapper {
     display: flex;
-    align-items: start;
+    align-items: center;
     width: 60%;
     height: 100vh;
 }
